--- a/src/components/UserMenu/UserMenu.module.css
+++ b/src/components/UserMenu/UserMenu.module.css
@@ -1,11 +1,11 @@
-.item {
-    padding: 8px 12px;
-        margin-top: 4px;
-        font-size: 16px;
-        border: 1px solid #ccc;
-        border-radius: 6px;
-        outline: none;
+.container {
+display: flex;
 
+}
+
+.welcome {
+margin-right: 40px;
+font-size: 18px;
 }
 
 .button {
@@ -17,7 +17,6 @@
     border-radius: 8px;
     cursor: pointer;
     transition: background-color 0.2s ease;
-    margin-left: 50px;
 }
 
 .button:hover {
